@@ -162,6 +162,7 @@
 # define ACE_LACKS_IN_ADDR
 # define ACE_LACKS_SOCKADDR_IN
 # define ACE_LACKS_HOSTENT
+# define ACE_LACKS_SOCKADDR
 
 // Missing methods
 # define ACE_LACKS_GETHOSTBYADDR
